Fix compilation error

--- a/thesis-source/main.tex
+++ b/thesis-source/main.tex
@@ -25,9 +25,11 @@
 
 \documentclass[
 12pt, % The default document font size, options: 10pt, 11pt, 12pt
-\if\OneSided1
+% apparently the macro causes compilation issues
+% change the option by yourself if needed
+%\if\OneSided1
 oneside,
-\fi % Two side (alternating margins) for binding by default, uncomment to switch to one side
+%\fi % Two side (alternating margins) for binding by default, uncomment to switch to one side
 russian, english,
 singlespacing, % Single line spacing, alternatives: onehalfspacing or doublespacing
 %draft, % Uncomment to enable draft mode (no pictures, no links, overfull hboxes indicated)
